--- a/build.xml
+++ b/build.xml
@@ -2,14 +2,14 @@
 <project name="MockJavaMail" default="all" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant" >
   <echo message="Starting ${ant.project.name}"/>
 
-  <property name="src" location="src"/>
-  <property name="build" location="build"/>
-  <property name="dist"  location="dist"/>
-  <property name="lib"  location="lib"/>
+  <property name="src.dir" location="${basedir}/src"/>
+  <property name="build.dir" location="${basedir}/build"/>
+  <property name="dist.dir"  location="${basedir}/dist"/>
+  <property name="lib.dir"  location="${basedir}/lib"/>
 
    <!-- Run ant resolve to populate the JAR dependencies-->
   <path id="classpath">
-    <fileset dir="${lib}" includes="*.jar"/>
+    <fileset dir="${lib.dir}" includes="*.jar"/>
   </path>
 
    <!-- Download Ivy from apache and change the path here -->
@@ -21,7 +21,7 @@
   <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpathref="classpath" />
       
   <target name="resolve" description="Ivy dependency resolver">
-    <ivy:retrieve pattern="${basedir}/${lib}/[artifact]-[type]-[revision].[ext]" conf="default" />
+    <ivy:retrieve pattern="${lib.dir}/[artifact]-[type]-[revision].[ext]" conf="default" />
   </target>
 
   <target name="compile" description="compile source code">
@@ -34,8 +34,8 @@
   </target>
   
   <target name="clean" description="clean built files">
-    <delete dir="${build}"/>
-    <delete dir="${dist}"/>
+    <delete dir="${build.dir}"/>
+    <delete dir="${dist.dir}"/>
   </target>
 
   <target name="all" depends="clean, resolve, compile, dist" description="Clean all project, download the dependencies and build the JAR file" />
